fixed overflow and title

--- a/src/App.css
+++ b/src/App.css
@@ -90,6 +90,7 @@ body {
   text-decoration: none !important;
   list-style-type: none;
   box-shadow: 5px 10px 18px #888888;
+  overflow: auto;
 }
 
 #formLogOut {
